# type-inspection

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements_dev.txt  setup.cfg
tests/: handler_test.py
typeinspection/: __init__.py  handlers.py
