[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "typeinspection"
version = "0.6.0"
description = "Get class names and fully qualified names of Python classes"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Juan Luis Casanova", email = "juanluiscr27@hotmail.com" }
]
keywords = ["type", "inspection", "class", "names"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
testing = [
    "pytest==9.0.2",
    "wheel==0.46.3",
    "setuptools==80.10.2",
]

[project.urls]
Homepage = "https://github.com/juanluiscr27"

[tool.hatch.build.targets.wheel]
packages = ["typeinspection"]

[tool.hatch.build.targets.sdist]
include = [
    "/typeinspection",
    "/tests",
    "/CHANGELOG.md",
    "/LICENSE",
    "/README.md",
]
