[metadata]
name = typeinspection
version = 0.2.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/juanluiscr27
author = Juan Luis Casanova
author_email = juanluiscr27@hotmail.com
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    License :: OSI Approved :: CCPL License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
packages =
    find:

python_requires = >=3.12
zip_safe = no

[options.packages.find]
exclude =
    tests*
[options.extras_require]
testing =
    pytest>=8.1.1
    wheel>=0.43.0
    setuptools>=69.2.0


[bdist_wheel]
universal = True
